<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_question"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".quiz.QuizActivity"
    >

    <TextView
        android:id="@+id/learn_quiz_Question"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_shape"
        android:gravity="center"
        android:text="سوال"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_quiz_ans1"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_margin="8dp"
        android:text="Button"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/btn_quiz_ans4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <Button
        android:id="@+id/btn_quiz_ans2"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_margin="8dp"
        android:text="Button"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/btn_quiz_ans3"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <Button
        android:id="@+id/btn_quiz_ans3"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_margin="8dp"
        android:layout_marginBottom="8dp"
        android:text="Button"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_quiz_ans4"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_margin="8dp"
        android:layout_marginBottom="8dp"
        android:text="Button"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

    <ImageView
        android:id="@+id/learn_quiz_loading"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#FFFFFF"
        android:elevation="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/loading_gif" />
    <TextView
        android:id="@+id/learn_quiz_loading_text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/loading_text"
        app:layout_constraintTop_toBottomOf="@id/learn_quiz_loading"
        tools:ignore="MissingConstraints" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/quiz_end"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#9EFFFFFF"
        android:elevation="4dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        tools:targetApi="lollipop">

        <Button
            android:id="@+id/learn_quiz_go_next"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginVertical="8dp"
            android:layout_marginHorizontal="32dp"
            android:text="@string/next_question"
            android:textSize="25sp"
            android:background="@color/main_green"
            app:layout_constraintBottom_toTopOf="@+id/report"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/positive" />

        <Button
            android:id="@+id/report"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/report_question"
            android:drawableRight="@drawable/ic_baseline_report_problem_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/negative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/dislike_question"
            app:layout_constraintEnd_toStartOf="@+id/guideline4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:drawableRight="@drawable/ic_baseline_thumb_down_24"
            android:drawableEnd="@drawable/ic_baseline_thumb_down_24" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <Button
            android:id="@+id/positive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/like_question"
            android:drawableRight="@drawable/ic_baseline_thumb_up_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toTopOf="parent"
            android:drawableEnd="@drawable/ic_baseline_thumb_up_24" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/progressBarQuiz"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/iq_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:text="TextView"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBarQuiz" />

    <TextView
        android:id="@+id/addIQ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="+5 IQ"
        android:textColor="#FF0000"
        android:textSize="24sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/learn_quiz_loading"
        app:layout_constraintEnd_toEndOf="@+id/learn_quiz_loading"
        app:layout_constraintStart_toStartOf="@+id/learn_quiz_loading"
        app:layout_constraintTop_toTopOf="@+id/learn_quiz_loading" />

</androidx.constraintlayout.widget.ConstraintLayout>